[package]
name = "live-coding-12-2021"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
url = "2.2"
github-client = { path = "github-client", package = "github-client"}
eframe = "0.15.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1.16", features = ["full"]}
tracing = "0.1.29"
tracing-attributes = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1"
log = "0.4"

[dev-dependencies]
git2 = "0.14.0"
structopt = "0.3"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
