[package]
name = "github-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
log = "0.4"
url = "2.2"
anyhow = "1.0"
async-trait = "0.1.52"
git2 = "0.14.0"
reqwest =  { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
[dev-dependencies]
tokio = {version = "1.17", features = ["macros"] }
log = "0.4"

# time = "0.3.7"
# tempfile = "3.1.0"
# paste = "1"